# sms-gateway

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
deploy/systemd/: install.sh  sms-gateway.service
docs/: ARCHITECTURE.md
sms_gateway/: __init__.py  config.py  daemon.py
sms_gateway/adapters/queues/: factory.py  memory.py
sms_gateway/adapters/services/: __init__.py  gammu.py  gsm_modem.py  registry.py  stub_service.py  telegram.py
sms_gateway/common/: logging.py
sms_gateway/domain/: backoff.py  models.py
sms_gateway/domain/config/: __init__.py  adapters.py  base.py  queue.py  runtime.py
sms_gateway/domain/messaging/: __init__.py  destination.py  message.py  types.py
sms_gateway/integrations/config/: __init__.py  base.py  gammu.py  stub.py  telegram.py
sms_gateway/integrations/services/: __init__.py  registry.py
sms_gateway/integrations/services/gammu/: adapter.py  config.py  gammu.py
sms_gateway/integrations/services/stub_service/: adapter.py  config.py  stub_service.py
sms_gateway/integrations/services/telegram/: adapter.py  config.py  telegram.py
sms_gateway/ports/: message_queue.py  messaging.py
sms_gateway/ports/protocols/: email.py  sms.py  telegram.py
sms_gateway/services/: base.py  integration.py  sms.py
tests/: test_daemon.py  test_logging.py
tests/adapters/queues/: test_factory.py  test_memory.py
tests/adapters/services/: test_gammu.py  test_gsm_modem.py  test_stub_service.py  test_telegram.py
tests/services/: test_backoff.py  test_base.py  test_integration.py  test_sms.py
(+3 files in other folders)
