[tool.poetry]
name = "sms-gateway"
version = "0.1.0"
description = "SMS Gateway daemon with support for multiple communication channels"
authors = []
readme = "README.md"
packages = [{include = "sms_gateway"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"
typing-extensions = "^4.8.0"
python-telegram-bot = "^20.7"
python-gammu = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
mypy = "^1.5.0"
ruff = "^0.0.286"
pytest-asyncio = "<1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "B", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true